# EnergyAtlasGIS

./: .env.example  .gitignore  README.md  create_atlas_structure.sh  makefile  pyproject.toml
api/app/: main.py
api/app/core/: config.py  logging.py
api/app/models/: country.py
api/app/routers/: countries.py
api/app/services/: countries_services.py
api/tests/: gdilcompar.py  test_countries.py
app/: Home.py  config.py
app/components/: map_utils.py
docs/: ARCHITECTURE.md  DOCUMENTATION.md
gis/: example1.ipynb  example2.ipynb
