[project]
name = "Kernel-BYT"
version = "0.1.0"
description = "Universal GIS environment for EnergyAtlasGIS"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "uvicorn[standard]>=0.38.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "requests>=2.32.5",
    "pandas>=2.2.1",
    "ruff>=0.14.5",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "streamlit>=1.51.0",
]




